Added solution for incrementing an arbitrary precision integer

--- a/epi_judge_python/tree_height_balance.ipynb
+++ b/epi_judge_python/tree_height_balance.ipynb
@@ -96,20 +96,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "        <- 10 20 -> 30 -> 25 -> 22\n",
     "\"\"\"\n",
     "lt = BstNode(10, None, None)\n",
     "rt_lt_lt = BstNode(22, None, None)\n",
-    "rt_lt = BstNode(25, rt_lt, None)\n",
+    "rt_lt = BstNode(25, rt_lt_lt, None)\n",
     "rt = BstNode(30, rt_lt, None)\n",
     "root = BstNode(20, lt, rt)\n",
-    "is_height_balanced(root_A)"
+    "is_height_balanced(root)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
