Added solution for variant of incrementing an arbitrary-precision integer

--- a/epi_judge_python/increment_integer.ipynb
+++ b/epi_judge_python/increment_integer.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nProblem 6.2: Increment an arbitrary precision integer\\n'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Problem 6.2: Increment an arbitrary precision integer\n",
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,43 +53,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 0, 0]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "incr_int([1, 3, 9, 9])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incr_int([9, 9, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def incr_ints(B1, B2):\n",
+    "    \"\"\"\n",
+    "    Given two binary string representations of integers,\n",
+    "    returns the result of adding both.\n",
+    "    \"\"\"    \n",
+    "    if not B1:\n",
+    "        return B2\n",
+    "    elif not B2:\n",
+    "        return B1\n",
+    "    \n",
+    "    \n",
+    "    i = len(B1) - 1 # Index into B1\n",
+    "    j = len(B2) - 1 # Index into B2\n",
+    "        \n",
+    "    # Perform addition\n",
+    "    sum_bit = 0\n",
+    "    carry = 0   \n",
+    "    result = [\"\" for x in range(max(len(B1), len(B2)) + 1)] \n",
+    "    while i >= 0 and j >= 0:\n",
+    "        sum_bit = int(B1[i]) ^ int(B2[j]) ^ carry\n",
+    "        print(B1[i], B2[j], carry)\n",
+    "        carry = (int(B1[i]) & int(B2[j])) | ((int(B1[i]) | int(B2[j])) & carry)\n",
+    "        result[max(i, j) + 1] = str(sum_bit)\n",
+    "        i -= 1\n",
+    "        j -= 1\n",
+    "        \n",
+    "    print(i, j)\n",
+    "    # Add up any remaining bits\n",
+    "    while i >= 0:\n",
+    "        sum_bit = int(B1[i]) ^ carry\n",
+    "        carry = int(B1[i]) & carry\n",
+    "        result[i + 1] = str(sum_bit)\n",
+    "        i -= 1\n",
+    "        \n",
+    "    while j >= 0:\n",
+    "        sum_bit = int(B2[j]) ^ carry\n",
+    "        carry = int(B2[j]) & carry\n",
+    "        result[j + 1] = str(sum_bit)  \n",
+    "        j -= 1\n",
+    "        \n",
+    "    result[0] = str(carry)        \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 0\n",
+      "-1 1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[1, 0, 0, 0]"
+       "['0', '1', '1', '1']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "incr_int([9, 9, 9])"
+    "B1 = \"0\"\n",
+    "B2 = \"111\"\n",
+    "incr_ints(B1, B2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
