--- a/epi_judge_python/reverse_sublist.ipynb
+++ b/epi_judge_python/reverse_sublist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
     "        curr = curr.next\n",
     "        i += 1\n",
     "        \n",
-    "    print(f\"before start node = {before_start}\")\n",
-    "    print(f\"start node = {curr}\")\n",
+    "#     print(f\"before start node = {before_start}\")\n",
+    "#     print(f\"start node = {curr}\")\n",
     "    start_node = curr # Node at index start\n",
     "    \n",
     "    prev = before_start # Node before curr\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,28 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "before start node = 1 -> 3 -> 5 -> 7 -> 9 -> 11\n",
-      "start node = 3 -> 5 -> 7 -> 9 -> 11\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1 -> 9 -> 7 -> 5 -> 3 -> 11"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Even-length sublist\n",
     "reverse_sublist(n1, 2, 5)"
@@ -122,14 +103,188 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n1 = ListNode(1, None)\n",
+    "n2 = ListNode(3, None)\n",
+    "n3 = ListNode(5, None)\n",
+    "n4 = ListNode(7, None)\n",
+    "n5 = ListNode(9, None)\n",
+    "n6 = ListNode(11, None)\n",
+    "\n",
+    "n1.next = n2\n",
+    "n2.next = n3\n",
+    "n3.next = n4\n",
+    "n4.next = n5\n",
+    "n5.next = n6\n",
+    "reverse_sublist(n1, 1, 6)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reverse_sublist_k(lst, k):\n",
+    "    \"\"\"\n",
+    "    Reverses the list \"lst\" k nodes at a time. If lst is not a multiple\n",
+    "    of k, and lst has n nodes, then the last n mod k nodes are unchanged.\n",
+    "    \"\"\"\n",
+    "    curr_node = lst   \n",
+    "    \n",
+    "    # Determine the length of the list. This prevents having to check\n",
+    "    # whether there are still nodes left when reversing the list\n",
+    "    # k nodes at a time.\n",
+    "    n = 0\n",
+    "    while curr_node:\n",
+    "        n += 1\n",
+    "        curr_node = curr_node.next \n",
+    "        \n",
+    "    # Reverse the list k nodes at a time.    \n",
+    "    should_iterate = (k <= n) # Will be true if at least k nodes can be reversed\n",
+    "    \n",
+    "    # For iterating over a sub-list\n",
+    "    curr_node = lst\n",
+    "    head = None\n",
+    "    prev_node = None\n",
+    "    \n",
+    "    # For adjusting the sublist pointers\n",
+    "    start_node = curr_node # Node at start of a sublist\n",
+    "    end_node = None # Node at end of sublist of each sub-list\n",
+    "    \n",
+    "    i = 1      \n",
+    "    \n",
+    "    while curr_node and should_iterate:      \n",
+    "        print(f\"i = {i}\")\n",
+    "        print(f\"curr_node = {curr_node}\")  \n",
+    "        print(f\"prev_node = {prev_node}\")\n",
+    "        print(f\"start_node = {start_node}\")\n",
+    "        print(f\"Current list = {head}\\n\")     \n",
+    "\n",
+    "        # If this is the kth node in a sub-list\n",
+    "        if i % k == 0:\n",
+    "            \n",
+    "            # Update the head of the entire list, which\n",
+    "            # will be the ending node of the first reversed sublist\n",
+    "            if not head:\n",
+    "                head = curr_node   \n",
+    "                \n",
+    "            # Update the pointers for the kth node in this sublist\n",
+    "            temp = curr_node.next # Store next node\n",
+    "            curr_node.next = prev_node # Reverse the pointer\n",
+    "            \n",
+    "            print(f\"kth node\")\n",
+    "            print(f\"temp = {temp}\")\n",
+    "            print(f\"curr_node check = {curr_node}\")  \n",
+    "            print(f\"head check = {head}\")          \n",
+    "            print(f\"end node check = {end_node}\")\n",
+    "\n",
+    "            # If end_node has not been set, this is the first sublist\n",
+    "            if not end_node:\n",
+    "                end_node = start_node\n",
+    "                # Tentatively set the next pointer. \n",
+    "                end_node.next = temp\n",
+    "            else:            \n",
+    "                end_node.next = curr_node\n",
+    "                end_node = start_node\n",
+    "            \n",
+    "            # Set up for iterating over the next sub-list\n",
+    "            curr_node = temp\n",
+    "            start_node = temp\n",
+    "            prev_node = None              \n",
+    "              \n",
+    "            should_iterate = (k <= (n - i))\n",
+    "            i += 1\n",
+    "\n",
+    "            \n",
+    "            print(f\"Current list check = {head}\\n\")     \n",
+    "            \n",
+    "        # Reverse the nodes\n",
+    "        else:\n",
+    "            temp = curr_node.next # Store the next node\n",
+    "            curr_node.next = prev_node # Reverse curr_node's pointer\n",
+    "            prev_node = curr_node # The current node becomes the previous node for the next iteration\n",
+    "            curr_node = temp # Set up node for next iteration         \n",
+    "            i += 1\n",
+    "           \n",
+    "    # head will be None if k > n\n",
+    "    if not head:\n",
+    "        return lst\n",
+    "    else:\n",
+    "        return head\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 1\n",
+      "curr_node = 1 -> 2 -> 3 -> 4 -> 5 -> 6\n",
+      "prev_node = None\n",
+      "start_node = 1 -> 2 -> 3 -> 4 -> 5 -> 6\n",
+      "Current list = None\n",
+      "\n",
+      "i = 2\n",
+      "curr_node = 2 -> 3 -> 4 -> 5 -> 6\n",
+      "prev_node = 1\n",
+      "start_node = 1\n",
+      "Current list = None\n",
+      "\n",
+      "i = 3\n",
+      "curr_node = 3 -> 4 -> 5 -> 6\n",
+      "prev_node = 2 -> 1\n",
+      "start_node = 1\n",
+      "Current list = None\n",
+      "\n",
+      "i = 4\n",
+      "curr_node = 4 -> 5 -> 6\n",
+      "prev_node = 3 -> 2 -> 1\n",
+      "start_node = 1\n",
+      "Current list = None\n",
+      "\n",
+      "kth node\n",
+      "temp = 5 -> 6\n",
+      "curr_node check = 4 -> 3 -> 2 -> 1\n",
+      "head check = 4 -> 3 -> 2 -> 1\n",
+      "end node check = None\n",
+      "Current list check = 4 -> 3 -> 2 -> 1 -> 5 -> 6\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4 -> 3 -> 2 -> 1 -> 5 -> 6"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n1 = ListNode(1, None)\n",
+    "n2 = ListNode(2, None)\n",
+    "n3 = ListNode(3, None)\n",
+    "n4 = ListNode(4, None)\n",
+    "n5 = ListNode(5, None)\n",
+    "n6 = ListNode(6, None)\n",
+    "\n",
+    "\n",
+    "\n",
+    "n1.next = n2\n",
+    "n2.next = n3\n",
+    "n3.next = n4\n",
+    "n4.next = n5\n",
+    "n5.next = n6\n",
+    "reverse_sublist_k(n1, 4)"
+   ]
   },
   {
    "cell_type": "code",
@@ -151,18 +306,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
   }
  },
  "nbformat": 4,
