--- a/epi_judge_python/advance_by_offsets.ipynb
+++ b/epi_judge_python/advance_by_offsets.ipynb
@@ -161,6 +161,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def advance_variant(A):\n",
+    "    \"\"\"\n",
+    "    Returns the minimum number of steps needed to get to the last location, or -1,\n",
+    "    if it is impossible to do so\n",
+    "    \"\"\"\n",
+    "    if len(A) == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    farthest_idx = 0\n",
+    "    steps = 0\n",
+    "    for i in range(len(A) - 1):\n",
+    "        if A[i] + i > farthest_idx:\n",
+    "            steps += 1\n",
+    "            farthest_idx = A[i] + i\n",
+    "        \n",
+    "        print(f\"i = {i}\")\n",
+    "        print(f\"curr idx = {farthest_idx}\")\n",
+    "        \n",
+    "        # If the farthest reachable index equals the current index, then it is not\n",
+    "        # possible to reach the end of the array.\n",
+    "        if i == farthest_idx:\n",
+    "            return -1\n",
+    "        \n",
+    "        # If the farthest reachable index is at the end of the array or greater\n",
+    "        # than the ending index, then it is possible to get to index n - 1\n",
+    "        if farthest_idx >= len(A) - 1:\n",
+    "            return steps\n",
+    "    \n",
+    "    return steps\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0\n",
+      "curr idx = 1\n",
+      "i = 1\n",
+      "curr idx = 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "advance_variant([1, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0\n",
+      "curr idx = 2\n",
+      "i = 1\n",
+      "curr idx = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "advance_variant([2, 3, 0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0\n",
+      "curr idx = 2\n",
+      "i = 1\n",
+      "curr idx = 4\n",
+      "i = 2\n",
+      "curr idx = 4\n",
+      "i = 3\n",
+      "curr idx = 4\n",
+      "i = 4\n",
+      "curr idx = 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "advance_variant([2, 3, 0, 0, 0, 1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0\n",
+      "curr idx = 1\n",
+      "i = 1\n",
+      "curr idx = 4\n",
+      "i = 2\n",
+      "curr idx = 4\n",
+      "i = 3\n",
+      "curr idx = 4\n",
+      "i = 4\n",
+      "curr idx = 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "advance_variant([1, 3, 0, 0, 2, 1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
