Added solution for removing all occurrences of a key from an array

--- a/epi_judge_python/sorted_array_remove_dups.ipynb
+++ b/epi_judge_python/sorted_array_remove_dups.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +179,133 @@
    "source": [
     "remove_dups([1, 2, 3, 3, 3, 4])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_key(A, key):\n",
+    "    \"\"\"\n",
+    "    Removes all occurences of the element \"key\" from the array and\n",
+    "    returns a tuple of (updated array, number of elements in A that are not equal to key).\n",
+    "    Time: O(n)\n",
+    "    Space: O(1)\n",
+    "    \"\"\"\n",
+    "    i = 0 # index into sub-array of elements not equal to key\n",
+    "    j = len(A) - 1 # index into sub-array of elements equal to key\n",
+    "    \n",
+    "    # Advance through the array, moving occurrences of key to the\n",
+    "    # end.\n",
+    "    \n",
+    "    while i < j:\n",
+    "        if A[i] == key:\n",
+    "            swap(A, i, j)\n",
+    "            # A[j] could be equal to key, so don't increment i\n",
+    "            # Decrement j to expand the \"key\" subarray\n",
+    "            j = j - 1\n",
+    "        else:\n",
+    "            # Expand the non - \"key\" subarray\n",
+    "            i += 1\n",
+    "    # The above loop stops when i == j, which requires the following check:            \n",
+    "    # If the element at A[i] != key, add 1 to account for one more element\n",
+    "    # not equal to key\n",
+    "    if A[i] != key:\n",
+    "        i += 1\n",
+    "            \n",
+    "    return A, i\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 3, 3, 2, 2], 3)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_key([1, 2, 2, 3, 3], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 3, 3], 1)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_key([1, 3, 3], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 5, 3, 2], 5)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Key not in array\n",
+    "remove_key([1, 2, 5, 3, 2], 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 1, 1, 4, 3, 2, 2, 2], 5)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Key values are not consecutive\n",
+    "remove_key([1, 2, 1, 4, 2, 3, 2, 1], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
