Added solution for removing extras from a sorted array

--- a/epi_judge_python/sorted_array_remove_dups.ipynb
+++ b/epi_judge_python/sorted_array_remove_dups.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nProblem 6.5: Remove duplicates from a sorted array.\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Problem 6.5: Remove duplicates from a sorted array.\n",
@@ -13,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,6 +310,175 @@
     "# Key values are not consecutive\n",
     "remove_key([1, 2, 1, 4, 2, 3, 2, 1], 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_extras(A, m):\n",
+    "    \"\"\"\n",
+    "    Updates the sorted array A so that for each element \"x\" in A, x appears\n",
+    "    at most min(2, m) times, where m > 0.\n",
+    "    Only 1 pass through the array is allowed, and no additional\n",
+    "    storage is allowed.\n",
+    "    All elements after the valid portion of the valid array may not be in\n",
+    "    any particular order.\n",
+    "    \"\"\"\n",
+    "    if len(A) == 1:\n",
+    "        return A\n",
+    "    \n",
+    "    count = 1 # Count of the current element being checked for extras\n",
+    "    write_index = 1 # Index to put the remaining elements in\n",
+    "    should_delete = (count == min(2, m)) # If the element at the current index should be \"deleted\" from the final array\n",
+    "    for i in range(1, len(A)):\n",
+    "#         print(f\"index i = {i}\")\n",
+    "#         print(f\"write index = {write_index}\")\n",
+    "#         print(A)\n",
+    "\n",
+    "\n",
+    "        # If a duplicate is found\n",
+    "        if A[i] == A[write_index - 1]:\n",
+    "            if should_delete:\n",
+    "                # Advance over this duplicate\n",
+    "                pass\n",
+    "            else:\n",
+    "                # Don't delete, update count\n",
+    "                count += 1\n",
+    "                should_delete = (count == min(2, m))\n",
+    "                swap(A, i, write_index)\n",
+    "                write_index += 1\n",
+    "        # If a non-duplicate is found\n",
+    "        else:\n",
+    "            swap(A, i, write_index)\n",
+    "            write_index += 1\n",
+    "            count = 1\n",
+    "            should_delete = (count == min(2, m))       \n",
+    "#         print(f\"should delete = {should_delete}\\n\")\n",
+    "\n",
+    "    return A\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Don't remove any extras, no duplicates\n",
+    "remove_extras([1, 2, 3, 4], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index i = 4\n",
+      "write index = 4\n",
+      "[1, 1, 2, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 2, 3]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Don't remove any extras, with duplicates\n",
+    "remove_extras([1, 1, 2, 2, 3], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index i = 4\n",
+      "write index = 3\n",
+      "[1, 2, 3, 2, 4, 4, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 2, 4, 4]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove extras, m = 1\n",
+    "remove_extras([1, 2, 2, 3, 4, 4, 4], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index i = 4\n",
+      "write index = 3\n",
+      "[2, 2, 3, 2, 3, 3, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3, 3, 4, 3, 2]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove extras, m > 2\n",
+    "remove_extras([2, 2, 2, 3, 3, 3, 4], 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
