Added solution for longest equal subarray

--- a/epi_judge_python/buy_and_sell_stock.ipynb
+++ b/epi_judge_python/buy_and_sell_stock.ipynb
@@ -130,6 +130,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_equal_subarray(A):\n",
+    "    \"\"\"\n",
+    "    Returns the length of the longest contiguous subarray in A in which\n",
+    "    all of the elements are equal to each other.\n",
+    "    Time: O(n)\n",
+    "    Space: O(1)\n",
+    "    \"\"\"\n",
+    "    max_len = 1 # Length of the longest contiguous equal subarray found so far\n",
+    "    curr_len = 1 # length of the current candidate for longest equal subarray\n",
+    "    \n",
+    "    # Base case: a single-element subarray has 1 equal element\n",
+    "    if len(A) == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    for i in range(1, len(A)):\n",
+    "        # If the current element equals the previous element, then it\n",
+    "        # is part of a sub-array of length at least 2\n",
+    "        if A[i] == A[i - 1]:\n",
+    "            curr_len += 1            \n",
+    "            # Update the max length if applicable\n",
+    "            max_len = max(max_len, curr_len)\n",
+    "        else:\n",
+    "            # Reset the length of the current candidate for longest equal subarray\n",
+    "            curr_len = 1\n",
+    "                \n",
+    "#         print(f\"i = {i}\")\n",
+    "#         print(f\"max_len = {max_len}\")\n",
+    "#         print(f\"curr_len = {curr_len}\\n\")\n",
+    "                \n",
+    "    return max_len\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_equal_subarray([1, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_equal_subarray([1, 1, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_equal_subarray([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_equal_subarray([1, 1, 2, 1, 1, 1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longest_equal_subarray([1, 1, 2, 2, 1, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
